@startuml classDiagram
package "com.acme.oop.shared.domain.model.valueobjects" {
    class "Money" <<Value Object (Record)>> {
        *amount : BigDecimal
        *currency : Currency
        --
        +{static} zero() : Money
        +{static} zero(currency: Currency) : Money
        +{static} of(amount: BigDecimal, currency: Currency) : Money
        +{static} of(amount: String, currencyCode: String) : Money
        +add(other: Money) : Money
        +multiply(multiplier: int) : Money
    }

    class "Address" <<Value Object (Record)>> {
        *street : String
        *city : String
        *postalCode : String
        *country : String
    }

    class "CustomerId" <<Value Object (Record)>> {
        *value : UUID
        --
        +CustomerId()
        +CustomerId(value: UUID)
    }
}

package "com.acme.oop.crm.domain.model.aggregates" {
    entity "Customer" <<Aggregate Root>> {
        *id : CustomerId
        --
        -name : String
        -email : String
        -address : Address
        --
        +Customer(id: CustomerId, name: String, email: String, address: Address)
        +Customer(name: String, email: String, address: Address)
        +updateContactInfo(email: String, address: Address) : void
        +updateName(name: String) : void
        +getContactInfo() : String
    }
}

package "com.acme.oop.sales.domain.model.valueobjects" {
    class "ProductId" <<Value Object (Record)>> {
        *value : UUID
        --
        +ProductId()
        +ProductId(value: UUID)
    }
}

package "com.acme.oop.sales.domain.model.aggregates" {
    entity "SalesOrder" <<Aggregate Root>> {
        *id : UUID
        --
        -customerId : CustomerId
        -currency : Currency
        -orderDate : LocalDateTime
        -items : List<SalesOrderItem>
        -totalAmount : Money
        --
        +SalesOrder(id: UUID, customerId: CustomerId, orderDate: LocalDateTime, currency: Currency)
        +SalesOrder(customerId: CustomerId, currency: Currency)
        +SalesOrder(customerId: CustomerId)
        +addItem(productId: ProductId, quantity: int, unitPrice: Money) : void
        +calculateTotalAmount() : Money
        +getItems() : List<SalesOrderItem>
        +withOrderDate(orderDate: LocalDateTime) : SalesOrder
        +getTotalAmountAsString() : String
    }

    entity "SalesOrderItem" <<Entity>> {
        -productId : ProductId
        -quantity : int
        -unitPrice : Money
        --
        ~SalesOrderItem(productId: ProductId, quantity: int, unitPrice: Money)
        +calculateItemAmount() : Money
    }
}

Customer *--> "1" CustomerId
Customer o--> "1" Address

SalesOrder *--> "1" CustomerId
SalesOrder *--> "1" Money : totalAmount
SalesOrder *--> "many" SalesOrderItem : manages
SalesOrderItem *--> "1" ProductId
SalesOrderItem *--> "1" Money : unitPrice
@enduml